# beancount-categorizers

./: README.md  pyproject.toml
beancount_categorizers/: __init__.py  categorizer.py  flag_txn.py  hooks.py
